<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/general">

        <ListPreference
            android:defaultValue="hh:mm:ss - dd/MM/yyyy"
            android:entries="@array/time_format_array"
            android:entryValues="@array/time_format_values"
            android:key="time_format_key"
            android:icon="@drawable/ic_timeformat"
            android:title="@string/choose_time_formate"
            app:useSimpleSummaryProvider="true"/>
        <ListPreference
            android:defaultValue="Linear"
            android:entries="@array/note_style_array"
            android:entryValues="@array/note_style_values"
            android:key="note_style_key"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_style"
            android:title="@string/choose_note_style" />
        <Preference
            android:title="@string/remove_ads"
            android:summary="@string/remove_ads_summary"
            android:icon="@drawable/ic_remove_ads"
         />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_theme">

        <ListPreference
            android:defaultValue="bright_blue"
            android:entries="@array/choose_theme_array"
            android:entryValues="@array/choose_theme_value"
            android:key="theme_key"
            app:useSimpleSummaryProvider="true"
            android:title="@string/choose_theme"
            android:icon="@drawable/ic_theme_style"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/note_text_settings">

        <ListPreference
            android:defaultValue="16"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_value"
            android:key="title_size_key"
            app:useSimpleSummaryProvider="true"
            android:title="@string/title_text_size"
            android:icon="@drawable/ic_text"/>

        <ListPreference
            android:defaultValue="14"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_value"
            android:key="content_size_key"
            app:useSimpleSummaryProvider="true"
            android:title="@string/content_text_size"
            android:icon="@drawable/ic_text"/>
    </PreferenceCategory>

</PreferenceScreen>
