<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/delete_list"
        android:id="@+id/delete_list"/>
    <item
        android:title="@string/clear_list"
        android:id="@+id/clear_list"/>

    <item
        android:title="New item"
        android:id="@+id/new_item"
        android:icon="@drawable/ic_new_shop_item"
        app:actionLayout="@layout/edit_action_layout"
        android:orderInCategory="1"
        app:showAsAction="always|collapseActionView"/>

    <item
        android:title="Save item"
        android:id="@+id/save_item_list"
        android:icon="@drawable/ic_done_save"
        android:orderInCategory="3"
        app:showAsAction="always"/>

    <item
        android:title="@string/share_list"
        android:id="@+id/share_list"
        android:icon="@drawable/ic_baseline_share_24"
        android:orderInCategory="2"
        app:showAsAction="always"/>



</menu>